Harden user aggregation service