@@ -1,21 +1,27 @@
 package com.aggregation.service.service;
 
+import com.aggregation.service.config.properties.AggregationProperties;
+import com.aggregation.service.exception.SourceUnavailableException;
 import com.aggregation.service.model.MongoUser;
 import com.aggregation.service.model.User;
-import com.aggregation.service.repository.MongoUserRepository;
-import com.aggregation.service.repository.PostgresUserRepository;
+import com.aggregation.service.repository.jpa.PostgresUserRepository;
+import com.aggregation.service.repository.mongo.MongoUserRepository;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.time.Duration;
 import java.util.List;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.RejectedExecutionException;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class UserAggregationServiceTest {
@@ -26,14 +32,23 @@ class UserAggregationServiceTest {
     @Mock
     private MongoUserRepository mongoUserRepository;
 
-    @InjectMocks
+    private ExecutorService executor;
     private UserAggregationService userAggregationService;
-
     private User postgresUser;
     private MongoUser mongoUser;
 
     @BeforeEach
     void setUp() {
+        executor = Executors.newFixedThreadPool(2);
+        AggregationProperties properties = new AggregationProperties();
+        properties.setQueryTimeout(Duration.ofSeconds(1));
+        userAggregationService = new UserAggregationService(
+                postgresUserRepository,
+                mongoUserRepository,
+                executor,
+                properties
+        );
+
         postgresUser = User.builder()
                 .id("7d6d939c-74c2-45a1-924c-8ba608a7b1cf")
                 .username("user-1")
@@ -49,70 +64,97 @@ class UserAggregationServiceTest {
                 .build();
     }
 
-    @Test
-    void getAllUsers_ShouldReturnAggregatedUsersFromBothDatabases() {
-        when(postgresUserRepository.findAll()).thenReturn(Arrays.asList(postgresUser));
-        when(mongoUserRepository.findAll()).thenReturn(Arrays.asList(mongoUser));
-
-        List<User> result = userAggregationService.getAllUsers();
-
-        assertThat(result).hasSize(2);
-        
-        // Verify PostgreSQL user
-        User firstUser = result.stream()
-                .filter(u -> u.getId().equals("7d6d939c-74c2-45a1-924c-8ba608a7b1cf"))
-                .findFirst()
-                .orElseThrow();
-        assertThat(firstUser)
-                .extracting("username", "name", "surname")
-                .containsExactly("user-1", "User", "Userenko");
-
-        // Verify MongoDB user
-        User secondUser = result.stream()
-                .filter(u -> u.getId().equals("7d6d939c-74c2-45a1-924c-8ba608a7b3"))
-                .findFirst()
-                .orElseThrow();
-        assertThat(secondUser)
-                .extracting("username", "name", "surname")
-                .containsExactly("user-2", "Testuser", "Testov");
+    @AfterEach
+    void tearDown() {
+        executor.shutdownNow();
     }
 
     @Test
-    void searchUsers_ShouldReturnFilteredResults() {
-        when(postgresUserRepository.findByNameOrSurnamePattern("User"))
-            .thenReturn(Arrays.asList(postgresUser));
-        when(mongoUserRepository.findByNameOrSurnamePattern("User"))
-            .thenReturn(Arrays.asList());
+    void searchUsersAggregatesUsersInStableSourceOrder() {
+        when(postgresUserRepository.findAll()).thenReturn(List.of(postgresUser));
+        when(mongoUserRepository.findAll()).thenReturn(List.of(mongoUser));
+
+        List<User> result = userAggregationService.searchUsers(null, null);
+
+        assertThat(result)
+                .extracting(User::getUsername)
+                .containsExactly("user-1", "user-2");
+    }
+
+    @Test
+    void searchUsersUsesUsernameWhenBothFiltersArePresent() {
+        when(postgresUserRepository.findByUsernameContainingIgnoreCase("user"))
+                .thenReturn(List.of(postgresUser));
+        when(mongoUserRepository.findByUsernameContainingIgnoreCase("user"))
+                .thenReturn(List.of(mongoUser));
+
+        List<User> result = userAggregationService.searchUsers(" user ", "ignored");
+
+        assertThat(result).hasSize(2);
+    }
+
+    @Test
+    void searchUsersFindsNameAcrossBothSources() {
+        when(postgresUserRepository
+                .findByNameContainingIgnoreCaseOrSurnameContainingIgnoreCase("User", "User"))
+                .thenReturn(List.of(postgresUser));
+        when(mongoUserRepository
+                .findByFirstNameContainingIgnoreCaseOrLastNameContainingIgnoreCase("User", "User"))
+                .thenReturn(List.of());
 
         List<User> result = userAggregationService.searchUsers(null, "User");
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getName()).isEqualTo("User");
+        assertThat(result)
+                .extracting(User::getUsername)
+                .containsExactly("user-1");
     }
 
     @Test
-    void searchByUsername_ShouldReturnFilteredResults() {
-        when(postgresUserRepository.findByUsernamePattern("user-1"))
-            .thenReturn(Arrays.asList(postgresUser));
-        when(mongoUserRepository.findByUsernamePattern("user-1"))
-            .thenReturn(Arrays.asList());
+    void searchUsersFailsWhenOneSourceIsUnavailable() {
+        when(postgresUserRepository.findAll())
+                .thenThrow(new IllegalStateException("PostgreSQL unavailable"));
+        when(mongoUserRepository.findAll()).thenReturn(List.of(mongoUser));
 
-        List<User> result = userAggregationService.searchByUsername("user-1");
-        
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUsername()).isEqualTo("user-1");
+        assertThatThrownBy(() -> userAggregationService.searchUsers(null, null))
+                .isInstanceOf(SourceUnavailableException.class)
+                .hasMessageContaining("PostgreSQL");
     }
 
     @Test
-    void searchByName_ShouldReturnFilteredResults() {
-        when(postgresUserRepository.findByNameOrSurnamePattern("User"))
-            .thenReturn(Arrays.asList(postgresUser));
-        when(mongoUserRepository.findByNameOrSurnamePattern("User"))
-            .thenReturn(Arrays.asList());
+    void searchUsersTimesOutSlowSources() {
+        AggregationProperties properties = new AggregationProperties();
+        properties.setQueryTimeout(Duration.ofMillis(25));
+        UserAggregationService shortTimeoutService = new UserAggregationService(
+                postgresUserRepository,
+                mongoUserRepository,
+                executor,
+                properties
+        );
+        when(postgresUserRepository.findAll()).thenAnswer(invocation -> {
+            Thread.sleep(250);
+            return List.of(postgresUser);
+        });
+        when(mongoUserRepository.findAll()).thenReturn(List.of(mongoUser));
 
-        List<User> result = userAggregationService.searchByName("User");
-        
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getName()).isEqualTo("User");
+        assertThatThrownBy(() -> shortTimeoutService.searchUsers(null, null))
+                .isInstanceOf(SourceUnavailableException.class)
+                .hasMessageContaining("PostgreSQL");
+    }
+
+    @Test
+    void searchUsersFailsWhenAggregationExecutorIsSaturated() {
+        AggregationProperties properties = new AggregationProperties();
+        UserAggregationService saturatedService = new UserAggregationService(
+                postgresUserRepository,
+                mongoUserRepository,
+                task -> {
+                    throw new RejectedExecutionException("queue full");
+                },
+                properties
+        );
+
+        assertThatThrownBy(() -> saturatedService.searchUsers(null, null))
+                .isInstanceOf(SourceUnavailableException.class)
+                .hasMessageContaining("PostgreSQL");
     }
 }
